tests/data/parseerror/invalid-file-5.php
<?php

namespace invalid;

use foo as $bar;
